// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> Centered story renders snapshot 1`] = `
<header
  class="page-header page-header--center"
>
  <div
    class="page-header__left"
  >
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
    </h1>
    <div
      class="page-header__description"
    >
      This is a description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</header>
`;

exports[`<PageHeader /> Default story renders snapshot 1`] = `
<header
  class="page-header"
>
  <div
    class="page-header__left"
  >
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
    </h1>
  </div>
</header>
`;

exports[`<PageHeader /> TitleAfter story renders snapshot 1`] = `
<header
  class="page-header"
>
  <div
    class="page-header__left"
  >
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
      <div
        class="page-header__title-after"
      >
        <span
          class="text text--sm text--bold-weight tag tag--neutral"
        >
          <span
            class="tag__body"
          >
            Title after content
          </span>
        </span>
      </div>
    </h1>
    <div
      class="page-header__description"
    >
      This is a description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</header>
`;

exports[`<PageHeader /> TwoUp story renders snapshot 1`] = `
<header
  class="page-header page-header--2up"
>
  <div
    class="page-header__left"
  >
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
    </h1>
    <div
      class="page-header__description"
    >
      This is a description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
  <div
    class="page-header__right"
  >
    Right content. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</header>
`;

exports[`<PageHeader /> WithBreadcrumbs story renders snapshot 1`] = `
<header
  class="page-header"
>
  <div
    class="page-header__left"
  >
    <nav
      aria-label="breadcrumbs links"
      class="breadcrumbs"
    >
      <ul
        class="breadcrumbs__list"
      >
        <li
          class="breadcrumbs__item breadcrumbs__item-back"
        >
          <a
            class="breadcrumbs__link"
            href="#"
          >
            <svg
              class="icon breadcrumbs__back-icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                My Courses
              </title>
              <path
                d="M14.71 6.71c-.39-.39-1.02-.39-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
              />
            </svg>
          </a>
          <span
            aria-hidden="true"
            class="breadcrumbs__separator"
          >
            /
          </span>
        </li>
        <li
          class="breadcrumbs__item"
        >
          <a
            class="breadcrumbs__link"
            href="#"
          >
            My Courses
          </a>
          <span
            aria-hidden="true"
            class="breadcrumbs__separator"
          >
            /
          </span>
        </li>
        <li
          class="breadcrumbs__item"
        >
          <a
            class="breadcrumbs__link"
            href="#"
          >
            (2023) Modern World 1
          </a>
          <span
            aria-hidden="true"
            class="breadcrumbs__separator"
          >
            /
          </span>
        </li>
      </ul>
    </nav>
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
    </h1>
    <div
      class="page-header__description"
    >
      This is a description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</header>
`;

exports[`<PageHeader /> WithDescription story renders snapshot 1`] = `
<header
  class="page-header"
>
  <div
    class="page-header__left"
  >
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
    </h1>
    <div
      class="page-header__description"
    >
      This is a description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
    </div>
  </div>
</header>
`;

exports[`<PageHeader /> WithOverline story renders snapshot 1`] = `
<header
  class="page-header"
>
  <div
    class="page-header__left"
  >
    <p
      class="text text--overline"
    >
      Overline above title
    </p>
    <h1
      class="heading heading--size-headline-lg heading--neutral-strong page-header__title"
    >
      Page header title
    </h1>
    <div
      class="page-header__description"
    >
      This is a description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</header>
`;
